# libyuv-for-android

./: README.md  settings.gradle
YuvLibrary/: .gitignore  CMakeLists.txt  build.gradle  local.properties
YuvLibrary/gradle/wrapper/: gradle-wrapper.properties
YuvLibrary/src/main/: AndroidManifest.xml
YuvLibrary/src/main/cpp/: libyuv.cpp
YuvLibrary/src/main/cpp/include/: libyuv.h
YuvLibrary/src/main/cpp/include/libyuv/: compare.h  compare_row.h  convert_argb.h  planar_functions.h  rotate_row.h  row.h  scale_row.h  video_common.h
YuvLibrary/src/main/cpp/source/: compare.cc  convert.cc  convert_argb.cc  convert_from.cc  convert_from_argb.cc  convert_to_argb.cc  cpu_id.cc  planar_functions.cc  rotate.cc  rotate_any.cc  rotate_mips.cc  rotate_neon.cc  rotate_neon64.cc  row_any.cc  row_common.cc  row_gcc.cc  row_mips.cc  row_msa.cc  row_neon.cc  row_neon64.cc  row_win.cc  scale.cc  scale_any.cc  scale_argb.cc  scale_common.cc  scale_gcc.cc  scale_mips.cc  scale_neon.cc  scale_neon64.cc  scale_win.cc
YuvLibrary/src/main/java/com/lll/yuvlibrary/: YuvUtil.java
YuvLibrary/src/main/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com/erlei/yuvlibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/erlei/yuvlibrary/: MainActivity.java
app/src/test/java/com/erlei/yuvlibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
